# blueiris_alerts

./: .gitignore  .test.env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
client/: .env.template  README.md  pyproject.toml  requirements.txt  slack_alert.py
schemas/: slack_schema.py
server/: .env.template  Dockerfile  README.md  app.py  pyproject.toml  settings.py
server/blueiris/: blueiris_api.py  blueiris_camconfig.py  blueiris_clip.py
server/routes/: blueiris_routes.py  slack_routes.py
server/slack/: messages.py  pause_timer.py
tests/: test_data.py
tests/client/: test_slack_alert.py
tests/server/: test_blueiris_functions.py  test_blueiris_routes.py  test_slack_messages.py  test_slack_routes.py
tests/utils/: test_utils.py
utils/: config.py  exceptions.py  key.py  logger.py  utils.py
