[tool.poetry]
name = "blueiris-alerts-client"
version = "0.1.0"
description = ""
authors = ["wymangr"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "2.4.2"
pydantic-settings = "2.0.0"
slack-sdk = "3.23.0"
paho-mqtt = "1.6.1"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
ruff = "^0.1.3"
poethepoet = "^0.24.1"

[tool.poe.tasks]
format = { shell = "black ." }
lint = { shell = "ruff ." }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
